--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
