--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-image-gallery": "^1.2.7",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-simple-typewriter": "^3.0.1",
     "react-validation": "^3.0.7",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
