--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-image-gallery": "^1.2.7",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.6",
     "react-simple-typewriter": "^3.0.1",
     "react-spring": "^9.4.4",
     "react-validation": "^3.0.7",
